[package]
name = "ict-rs-cw-orch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Bridge between ict-rs and cw-orchestrator: spawn local chains via ict-rs, interact via cw-orch Daemon"

[dependencies]
cw-orch-core = { git = "https://github.com/permissionlessweb/cw-orchestrator", branch = "zk-mvp" }
cw-orch-daemon = { git = "https://github.com/permissionlessweb/cw-orchestrator", branch = "zk-mvp" }
ict-rs = { path = "../ict-rs", features = ["docker"] }

thiserror = "2"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
